--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <meta itemprop="description" content=""><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://stargravy.github.io/404.html" />
+<meta property="og:url" content="https://stargravy.ca/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -25,7 +25,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title>404 Page not found</title>
-	<link rel="stylesheet" href="http://stargravy.github.io/css/style.min.c61b605bffe0558627f18c60ab7f7cc28c431f15490eec470e47cfabd19011d3.css" integrity="sha256-xhtgW//gVYYn8Yxgq398woxDHxVJDuxHDkfPq9GQEdM=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stargravy.ca/css/style.min.c61b605bffe0558627f18c60ab7f7cc28c431f15490eec470e47cfabd19011d3.css" integrity="sha256-xhtgW//gVYYn8Yxgq398woxDHxVJDuxHDkfPq9GQEdM=" crossorigin="anonymous">
 </head>
 
 <body id="page">
@@ -38,14 +38,14 @@
 			<h1>404</h1>
 			<p>Oops, page not found…</p>
 			<p class="btn-404">
-				<a href="http://stargravy.github.io"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-				<a href="http://stargravy.github.io/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
+				<a href="https://stargravy.ca"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
+				<a href="https://stargravy.ca/posts"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
 			</p>
 		</div>
 	</div>
 
 
-	<script src="http://stargravy.github.io/js/bundle.min.ccd461e3ff23465f3abc289e72196bdee89623be9c0d2e3c164082c81fc0500d.js" integrity="sha256-zNRh4/8jRl86vCiechlr3uiWI76cDS48FkCCyB/AUA0=" crossorigin="anonymous"></script>
+	<script src="https://stargravy.ca/js/bundle.min.ccd461e3ff23465f3abc289e72196bdee89623be9c0d2e3c164082c81fc0500d.js" integrity="sha256-zNRh4/8jRl86vCiechlr3uiWI76cDS48FkCCyB/AUA0=" crossorigin="anonymous"></script>
 	
 
 </body>
